k8s/base/dev/api-gateway-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: api-gateway # This matches your api-gateway deployment's labels
  ports:
    - port: 80 # The port the LoadBalancer will listen on
      targetPort: 3001 # Your api-gateway's port
      protocol: TCP
