k8s/base/dev/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
    - hosts:
        - api.maketou.shop
      secretName: api-maketou-tls
  rules:
    - host: api.maketou.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3001
